# INNO-Muskelanalyse

./: .gitignore  .gitmodules  .taurignore  CMakeLists.txt  README.md  analyse.py  main.cpp  next.config.js  package-lock.json  package.json  segmentation.cpp  tailwind.config.js  tsconfig.json
.github/workflows/: publish.yaml  publish.yml  test-on-pr.yaml  test-on-pr.yml
Innolab_PM/ECMRecognition/CellconnectionRecognition/: CellconnectionRecognition.pyproj  CellconnectionRecognition.sln
Innolab_PM/ECMRecognition/ECMComponentsRecognition/: ECMComponentsRecognition.pyproj  ECMComponentsRecognition.sln
Innolab_PM/ECMRecognition/OberlappingCells/: OberlappingCells.sln  OverlappingCells.py  OverlappingCellsRecognition.pyproj
Innolab_PM/GreenDensity/: GreenDensity.pyproj  GreenDensity.sln  Green_Density.py
Innolab_PM/GreenDensityCalcOf/: GreenDensityCalcOf.py  GreenDensityCalcOf.pyproj  GreenDensityCalcOf.sln
Innolab_PM/MuskelzellenSkripteOhneBilder/: Blob_Detection.py  Create_binary.py  Image_Processing.py  MuskelzellenSkripteOhneBilder.pyproj  MuskelzellenSkripteOhneBilder.sln  Scikit_Morphology.py
MuskelzellenSkripteOhneBilder/: README.md
resources/: renameFiles.js  test.py
resources/cpp/segmentation/: CMakeLists.txt  segmentor.cpp
resources/python/analysis/: main.py
resources/segmentation/: segmentor.cpp
src/: style.css
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/bindings/: CachedMicrograph.ts  CachedSegment.ts  Case.ts  Micrograph.ts  PortableMicrograph.ts  QueueInfo.ts  QueueItem.ts  QueueLengths.ts  QueueStatus.ts  QueueType.ts  Segment.ts  SegmentStatus.ts  Status.ts
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-01-03-154523_create_case/: down.sql  up.sql
src-tauri/migrations/2023-01-17-111857_create_micrographs/: down.sql  up.sql
src-tauri/migrations/2023-01-26-160543_create-segments/: down.sql  up.sql
src-tauri/migrations/2023-05-03-185419_init/: down.sql  up.sql
src-tauri/migrations/2023-05-06-073410_config/: down.sql  up.sql
src-tauri/migrations/2023-05-08-155033_add_midpoint_to_segments/: down.sql  up.sql
src-tauri/resources/analysis/: analysis.py
src-tauri/resources/segmentation/: CMakeLists.txt  main.cpp  segment.cpp  segmentation.cpp
src-tauri/src/: data.rs  image_manipulation.rs  lib.rs  main.rs  menu.rs  migrations.rs  models.rs  schema.rs  state.rs  utils.rs
src-tauri/src/commands/: case.rs  csv.rs  debug.rs  micrograph.rs  micrographs.rs  mod.rs  processor.rs  queue.rs  resolve_requirements.rs  segment.rs  segments.rs  window.rs
src-tauri/src/data/: cases.rs  connection.rs  migrations.rs
src-tauri/src/events/: micrograph.rs
src-tauri/src/helpers/: python.rs
src-tauri/src/models/: case.rs  command.rs  config.rs  micrograph.rs  micrographs.rs  mod.rs  queue.rs  segment.rs  segments.rs
src-tauri/src/processor/: analysis.rs  import.rs  mod.rs  populate.rs  preprocess.rs
src-tauri/src/queues/: analysis.rs  import.rs  mod.rs  preprocessing.rs
src-tauri/src/state/: cleanup.rs  micrograph.rs  mod.rs  segments.rs  window.rs
src-tauri/src/tasks/: micrograph.rs  mod.rs  segment.rs
src/components/: Button.tsx  QueueStatus.tsx  Spinner.tsx
src/components/Analysis/: Analysis.tsx  Status.tsx  index.tsx
src/components/ImageBrowser/: Empty.tsx  ImageBrowser.tsx  ImageCard.tsx  index.tsx  lib.ts
src/components/ImageViewer/: ImageViewer.tsx  SegmentDetails.tsx  index.tsx
src/components/QueueStatus/: Idle.tsx  Warmup.tsx  index.tsx
src/components/cases/: CreateCaseModal.tsx  DeleteCaseModal.tsx  EmptyCaseList.tsx
src/components/layout/: Layout.tsx  Loading.tsx  Sidebar.tsx
src/components/layouts/main/: Sidebar.tsx  index.tsx  navigation.ts
src/components/micrographs/: EmptyState.tsx  Grid.tsx  List.tsx
src/components/reports/: ScatterOrientation.tsx
src/components/ui/: button.tsx
src/lib/: isClient.ts
src/pages/: _app.tsx  dashboard.tsx  debug.tsx  index.tsx  welcome.tsx
src/pages/cases/: [id].tsx  index.tsx
src/pages/main/: index.tsx  micrographs.tsx
src/pages/micrographs/: [id].tsx
src/pages/micrographs/segments/: [id].tsx
src/pages/report/: index.tsx
src/pages/viewer/: index.tsx
src/pages/viewer/[project]/: [micrograph].tsx
src/pages/windows/: welcome.tsx
src/types/: Case.ts
