[package]
name = "inno-muskelanalyse"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"
include = ["../resources/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
cmake = "0.1"
current_platform = "0.2.0"

[dependencies]
ts-rs = { version = "6.2.1", features = ["chrono-impl"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["dialog-open", "path-all", "protocol-asset", "shell-execute", "shell-open", "shell-sidecar"] }
tauri-plugin-window-state = "0.1"
diesel = { version = "2.0.0", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
chrono = { version = "0.4.23", features = ["serde"] }
mime_guess = "2.0.3"
uuid = { version = "1.2.2", features = ["serde", "v4", "fast-rng"] }
image = "0.24.5"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 2
