[package]
name = "inno-muskelanalyse"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"
build = "build/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }
cargo-emit = "0.2.1"
cmake = "0.1"
current_platform = "0.2.0"
fs_extra = "1.3.0"

[dependencies]
ts-rs = { version = "6.2.1", features = ["chrono-impl"] }
serde_json = "1.0.96"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-open", "path-all", "protocol-asset", "shell-execute", "shell-open", "shell-sidecar"] }
tauri-plugin-window-state = "0.1"
diesel = { version = "2.0.4", features = ["sqlite", "chrono", "r2d2"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
chrono = { version = "0.4.24", features = ["serde"] }
mime_guess = "2.0.3"
uuid = { version = "1.3.1", features = ["serde", "v4", "fast-rng"] }
image = "0.24.6"
libsqlite3-sys = { version = "0.26.0", features = ["bundled"] }
futures = "0.3.28"


[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
opt-level = 2
